<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:text="@string/maintext"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowscore"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/touch_and_record"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ds1_button"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1st_Text" />

        <Button
            android:id="@+id/ds2_button"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2st_Text" />

        <Button
            android:id="@+id/ds3_button"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3st_Text" />

        <Button
            android:id="@+id/ds4_button"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4st_Text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ds5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5st_Text" />

        <Button
            android:id="@+id/ds6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6st_Text" />

        <Button
            android:id="@+id/ds7_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7st_Text" />

        <Button
            android:id="@+id/ds8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8st_Text" />

    </LinearLayout>

    <TextView
        android:id="@+id/pan_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/판수"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/Reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/redo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redo_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/Reset_button"
        app:layout_constraintEnd_toStartOf="@+id/Reset_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/log_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_check"
        app:layout_constraintBaseline_toBaselineOf="@+id/Reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Reset_button" />

</androidx.constraintlayout.widget.ConstraintLayout>